Revert "Merge branch 'milestone_3' of https://gitlab.uni-marburg.de/hinkelma/sp24_gruppex_brecher_hinkelma_krenzerm_piacenza into milestone_3"
This reverts commit cef5fa552dc7f142fe906c82d7f70ea367035743, reversing
changes made to 05a8a463a6adeb43895625916a74c66c2df16fa1.